--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,125 @@
-# Flask for web development
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==24.2.0
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+cryptography==43.0.1
+dataclasses-json==0.5.14
+decorator==5.1.1
+et-xmlfile==1.1.0
+exceptiongroup==1.2.2
+executing==2.1.0
+filelock==3.16.0
 Flask==2.3.3
-
-# GenAI Python client (updated version)
-genai==0.5.0  # Corrected version
-
-google-generativeai==0.1.0
-
-# For LangChain components (SQLDatabaseChain, SQLDatabase, PromptTemplate, LLMChain)
-langchain==0.0.283  # Replace with the correct version you're using
-
-# MySQL Connector
-mysql-connector-python==8.1.0
-
-# PyMySQL
-pymysql==1.0.3
-
-# python-dotenv for environment variables
-python-dotenv==1.0.0
-
-# HuggingFace API for embeddings
-transformers==4.33.2
+Flask-Cors==5.0.0
+frozenlist==1.4.1
+fsspec==2024.9.0
+genai==0.5.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.19.2
+google-api-python-client==2.145.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+google-generativeai==0.8.3
+googleapis-common-protos==1.65.0
+greenlet==3.1.0
+grpcio==1.66.1
+grpcio-status==1.62.3
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.2
+huggingface==0.0.1
 huggingface-hub==0.19.0
-
-# Required for HuggingFace Inference API and API calls
+idna==3.8
+importlib_metadata==8.4.0
+iniconfig==2.0.0
+ipython==8.18.1
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+langchain==0.3.8
+langchain-community==0.2.16
+langchain-core==0.3.21
+langchain-experimental==0.0.65
+langchain-google-genai==2.0.5
+langchain-text-splitters==0.3.2
+langsmith==0.1.145
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+matplotlib-inline==0.1.7
+multidict==6.1.0
+mypy-extensions==1.0.0
+mysql-connector-python==8.1.0
+numexpr==2.10.1
+numpy==1.26.4
+oauthlib==3.2.2
+openai==0.20.0
+openpyxl==3.1.5
+orjson==3.10.7
+packaging==24.1
+pandas==2.2.2
+pandas-stubs==2.2.2.240807
+parso==0.8.4
+pluggy==1.5.0
+prompt_toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==4.21.12
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.9.1
+pydantic_core==2.23.3
+Pygments==2.18.0
+PyMySQL==1.0.3
+pyparsing==3.1.4
+pytest==7.4.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.35.1
+regex==2024.7.24
 requests==2.31.0
-
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rpds-py==0.20.0
+rsa==4.9
+safetensors==0.4.5
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.34
+stack-data==0.6.3
+tenacity==8.5.0
+tokenizers==0.13.3
+tomli==2.1.0
+tqdm==4.66.5
+traitlets==5.14.3
+transformers==4.33.2
+types-pytz==2024.1.0.20240417
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.2.2
+vdom==0.6
+wcwidth==0.2.13
+Werkzeug==3.0.4
+yarl==1.11.1
+zipp==3.20.1
